backport to 1.20.1 fabric